# neko

./: .gitignore  AGENT.md  CLAUDE.md  IMPLEMENTATION.md  INSTALL_MACOS.md  INSTALL_SNIPPET.md  NIX-QUICKSTART.md  README.md  bit4bit.md  config.yml  docker-compose.yaml  flake.nix  load-nix-image.sh  load-nix-imagem.sh  neko.md  pyproject.toml  result  shell.nix  todo.md
.github/workflows/: nix-build-sign.yml  nix-chromium.yml
docs/: nix-build-status.md  nix-build.md  recent-features.md  release-process.md  verify-artifacts.md
neko-agent-rs/: Cargo.toml
neko-agent-rs/src/backend/: macos.rs  mod.rs
neko-agent-rs/src/types/: mod.rs
nix/: chromium-image.nix  client.nix  image.nix  runtime.nix  server.nix  xorg-deps.nix
nix/lib/: version.nix
policy/cluster/: sigstore-policy.yaml
runtime/: .Xresources
sbom/: sbomnix.nix
scripts/: agent-config.yaml  attest-image.sh  attested-key  install-agent-macos.sh  install-agent.sh  neko-agent.service  publish-manifest.py  repro-check.sh  sign-image.sh  verify-image.sh
server/: build.sh  go.mod  go.sum  install-gstreamer-and-build.sh  shell.nix
server/cmd/: agent.go
server/internal/agent/: api.go  session.go
server/internal/capture/: manager.go
server/internal/desktop/: manager.go  xorg.go
server/pkg/darwin/: cursor.go  darwin.go  darwin_stub.go  keymap.go
server/pkg/desktop/: backend.go
server/pkg/drop/: drop.go  drop.h  drop_linux.c  drop_stub.go
server/pkg/xevent/: xevent.go  xevent.h  xevent_linux.c  xevent_stub.go
server/pkg/xorg/: backend.go  xorg.go  xorg.h  xorg_linux.c  (+1 more)
src/: agent.py
