[package]
name = "neko-agent"
version = "0.1.0"
edition = "2021"
authors = ["Neko Contributors"]
description = "Minimal desktop streaming agent for macOS written in Rust"
license = "MIT OR Apache-2.0"

[[bin]]
name = "neko-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# WebRTC
webrtc = "0.11"

# WebSocket and HTTP
axum = { version = "0.7", features = ["ws", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GStreamer for video capture
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

# macOS frameworks
core-foundation = "0.10"
core-graphics = "0.23"
cocoa = "0.26"
objc = "0.2"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
parking_lot = "0.12"
dashmap = "6.1"
once_cell = "1.20"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
